2004-08-02  Karl Berry  <karl@gnu.org>

	* makeinfo/cmds.c (cm_acronym_or_abbr): use strchr, not index.
	Report from: Prof Brian Ripley <ripley@stats.ox.ac.uk>, 
	2 Aug 2004 12:47:36 +0100 (BST)

2004-07-31  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi,
	* doc/texinfo.tex,
	* makeinfo/cmds.c, cmds.h, xml.c, xml.h,
	* util/texinfo.dtd: new command @abbr, suggested by Paul Eggert,
	who also sent the original documentation.

2004-07-30  Karl Berry  <karl@gnu.org>

	* info/infomap.c (initialize_vi_like_keymaps): bind j to
	info_next_line and k to info_prev_line.  From Eli.

2004-07-30  Maciej W. Rozycki  <macro@linux-mips.org>

	* info/filesys.c (extract_colon_unit): Clean up handling of the 
	end of string.

2004-07-27  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (verb): explicitly warn that @verb cannot be
	used in xref contexts.

2004-07-27  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\float): The parameters for @float are
	  separated by commas; allow a space after each of the commas.

	The TeX code for @caption, @shortcaption and @copying now uses
	a similar mechanism to macro definitions.  In detail:

	* doc/texinfo.tex (\macrobodyctxt, \macroargctxt): Generalize, ...
	  (\scanctxt, \scanargctxt): ... and introduce new variants.
	  (\scanexp): New macro--expand the parameter and call \scantokens.
	  (\copying, \docopying, \insertcopying): Use \scanargctxt and
	  \scanexp--this simplifies things a lot.
	  (\caption, \shortcaption): Redefine, using \scanargctxt via ...
	  (\docaption, \defcaption): ... these new macros.
	  (\appendtomacro): Simplify code, using \expandafter.

2004-07-26  Karl Berry  <karl@gnu.org>

        Avoid using the path for output files, since this led to problems
        when incompatible files created by previous versions were found.
	* makeinfo/files.c (find_and_load): introduce second parameter
		use_path, set to 0 from the call in handle_delayed_writes,
		1 in all cases.
        * makeinfo/files.h: change decl.