@@ -33,7 +33,7 @@ extern int echo_area_is_active, info_aborted_echo_area;
    killed some text. */
 extern int echo_area_last_command_was_kill;
 
-extern void inform_in_echo_area (char *message);
+extern void inform_in_echo_area (const char *message);
 extern void echo_area_inform_of_deleted_window (WINDOW *window);
 extern void echo_area_prep_read (void);
 extern VFunction *ea_last_executed_command;
